# agent-auth-istio-keycloak

./: .gitignore  README.md  keycloak-setup.md  test_api.py
agent-sts/: config.yaml
agentgateway/: config.yaml
backend/: Makefile  README.md  env.example  env.kube  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  models.py  tracing_config.py
backend/app/api/: optimization.py
backend/app/services/: a2a_service.py  agent_sts_service.py  keycloak_service.py  optimization_service.py  tracing_interceptor.py
backend/manifests/: deployment.yaml
keycloak/: config.json
market-analysis-agent/: Containerfile  Makefile  __main__.py  agent_executor.py  env.example  env.kube  mcp_client.py  tracing_config.py
market-analysis-agent/manifests/: deployment.yaml
policy_engine/: Makefile  README.md  go.mod  go.sum  main.go
policy_engine/proto/: ext_authz.proto
supply-chain-agent/: Makefile  README.md  __main__.py  agent_executor.py  agent_sts_service.py  env.example  env.kube  test_client.py  tracing_config.py
supply-chain-agent/manifests/: deployment.yaml
supply-chain-ui/: package.json
supply-chain-ui/src/: App.js  api.js
supply-chain-ui/src/hooks/: useOptimization.js
